@@ -5,13 +5,15 @@ import com.example.startlight.memComment.dao.MemCommentDao;
 import com.example.startlight.memComment.dto.MemCommentRepDto;
 import com.example.startlight.memComment.dto.MemCommentReqDto;
 import com.example.startlight.memComment.dto.MemCommentUpdateReqDto;
+import com.example.startlight.memComment.dto.PageResponse;
 import com.example.startlight.memComment.entity.MemComment;
 import com.example.startlight.memComment.mapper.MemCommentMapper;
 import com.example.startlight.member.dao.MemberDao;
-import com.example.startlight.member.entity.Member;
 import com.example.startlight.memoryStar.dao.MemoryStarDao;
 import com.example.startlight.memoryStar.entity.MemoryStar;
 import lombok.RequiredArgsConstructor;
+
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -60,13 +62,37 @@ public class MemCommentService {
         memCommentDao.delete(userId, comment_id);
     }
 
-    public List<MemCommentRepDto> findParentCommentByMemoryId(Long memory_id) {
-        List<MemComment> memCommentList = memCommentDao.findParentCommentByMemoryId(memory_id);
-        return memCommentList.stream().map(mapper::toDto).collect(Collectors.toList());
+    public PageResponse<MemCommentRepDto> findParentCommentByMemoryId(Long memory_id, int page) {
+        Page<MemComment> commentPage = memCommentDao.findParentCommentByMemoryId(memory_id, page);
+        Page<MemCommentRepDto> dtoPage = commentPage.map(mapper::toDto);
+        List<MemCommentRepDto> contentWithFlag = dtoPage.getContent().stream()
+                .peek(dto -> {
+                    boolean mine = checkIfMine(dto.getComment_id());
+                    dto.setMine(mine);
+                })
+                .toList();
+
+        return new PageResponse<>(
+                contentWithFlag,
+                dtoPage.isLast(),
+                dtoPage.getTotalElements(),
+                dtoPage.getTotalPages(),
+                dtoPage.isFirst(),
+                dtoPage.getSize(),
+                dtoPage.getNumber(),
+                dtoPage.getNumberOfElements(),
+                dtoPage.isEmpty()
+        );
     }
 
     public List<MemCommentRepDto> findAllByMemoryId(Long memory_id) {
         List<MemComment> allByMemoryId = memCommentDao.findAllByMemoryId(memory_id);
         return allByMemoryId.stream().map(mapper::toDto).collect(Collectors.toList());
+    }
+
+    public boolean checkIfMine(Long comment_id) {
+        Long userId = UserUtil.getCurrentUserId();
+        MemComment memComment = memCommentDao.findById(comment_id);
+        return userId.equals(memComment.getWriter_id());
     }
 }
